# Phishing-email-classification-

./: README.md  app.py  gmail_routes.py  models.py  news_routes.py  prediction_pipeline.py  pyproject.toml  routes.py  train_models.py
