[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-dance>=7.1.0",
    "flask>=3.1.2",
    "joblib>=1.5.2",
    "nltk>=3.9.2",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "flask-sqlalchemy>=3.1.1",
    "werkzeug>=3.1.3",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
]
